# Chat_App

./: CMakeLists.txt
Chat_App/: CMakeLists.txt  Chat_App.cpp  Server.cpp  User.cpp  UserDatabase.cpp
Chat_App/Client/: Client.cpp  QLoginForm.ui
Chat_App/Utils/: string_utils.h
Chat_App/includes/: Server.h  User.h  UserDatabase.h  network_headers.h
